[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Level3.gd" type="Script" id=1]
[ext_resource path="res://Assets/Vox/SpellbreakSphere.vox" type="ArrayMesh" id=2]
[ext_resource path="res://Assets/Vox/SpellbreakLevel.vox" type="ArrayMesh" id=3]
[ext_resource path="res://Assets/Sterling.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Chest.tscn" type="PackedScene" id=6]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( 2, 2.5, -10, 2, 0, -10, 2, 2.5, -9.5, 2, 0, -10, 2, 0, -9.5, 2, 2.5, -9.5, 4, 2, -9.5, 4, 0, -9.5, 4, 2, -9, 4, 0, -9.5, 4, 0, -9, 4, 2, -9, 5, 2, -9, 5, 0, -9, 5, 2, -8.5, 5, 0, -9, 5, 0, -8.5, 5, 2, -8.5, 5.5, 2, -8.5, 5.5, 0, -8.5, 5.5, 2, -8, 5.5, 0, -8.5, 5.5, 0, -8, 5.5, 2, -8, 6.5, 2, -8, 6.5, 0, -8, 6.5, 2, -7.5, 6.5, 0, -8, 6.5, 0, -7.5, 6.5, 2, -7.5, 7, 2, -7.5, 7, 0, -7.5, 7, 2, -7, 7, 0, -7.5, 7, 0, -7, 7, 2, -7, 7.5, 2, -7, 7.5, 0, -7, 7.5, 2, -6.5, 7.5, 0, -7, 7.5, 0, -6.5, 7.5, 2, -6.5, 8, 2, -6.5, 8, 0, -6.5, 8, 2, -5.5, 8, 0, -6.5, 8, 0, -5.5, 8, 2, -5.5, 8.5, 2, -5.5, 8.5, 0, -5.5, 8.5, 2, -5, 8.5, 0, -5.5, 8.5, 0, -5, 8.5, 2, -5, 9, 1, -5, 9, 0, -5, 9, 1, -4, 9, 0, -5, 9, 0, -4, 9, 1, -4, 9.5, 1, -4, 9.5, 0, -4, 9.5, 1, -2, 9.5, 0, -4, 9.5, 0, -2, 9.5, 1, -2, 10, 1, -2, 10, 0, -2, 10, 1, 2, 10, 0, -2, 10, 0, 2, 10, 1, 2, 9.5, 2, 2, 9.5, 0, 2, 9.5, 2, 4, 9.5, 0, 2, 9.5, 0, 4, 9.5, 2, 4, 9, 2, 4, 9, 0, 4, 9, 2, 5, 9, 0, 4, 9, 0, 5, 9, 2, 5, 8.5, 2, 5, 8.5, 0, 5, 8.5, 2, 5.5, 8.5, 0, 5, 8.5, 0, 5.5, 8.5, 2, 5.5, 8, 2, 5.5, 8, 0, 5.5, 8, 2, 6.5, 8, 0, 5.5, 8, 0, 6.5, 8, 2, 6.5, 7.5, 2, 6.5, 7.5, 0, 6.5, 7.5, 2, 7, 7.5, 0, 6.5, 7.5, 0, 7, 7.5, 2, 7, 7, 2, 7, 7, 0, 7, 7, 2, 7.5, 7, 0, 7, 7, 0, 7.5, 7, 2, 7.5, 6.5, 2, 7.5, 6.5, 0, 7.5, 6.5, 2, 8, 6.5, 0, 7.5, 6.5, 0, 8, 6.5, 2, 8, 5.5, 2, 8, 5.5, 0, 8, 5.5, 2, 8.5, 5.5, 0, 8, 5.5, 0, 8.5, 5.5, 2, 8.5, 5, 2, 8.5, 5, 0, 8.5, 5, 2, 9, 5, 0, 8.5, 5, 0, 9, 5, 2, 9, 4, 2, 9, 4, 0, 9, 4, 2, 9.5, 4, 0, 9, 4, 0, 9.5, 4, 2, 9.5, 2, 2, 9.5, 2, 0, 9.5, 2, 2, 10, 2, 0, 9.5, 2, 0, 10, 2, 2, 10, 9, 2, -5, 9, 1, -5, 9, 2, -4.5, 9, 1, -5, 9, 1, -4.5, 9, 2, -4.5, 9, 1.5, -4.5, 9, 1, -4.5, 9, 1.5, -4, 9, 1, -4.5, 9, 1, -4, 9, 1.5, -4, 9.5, 1.5, -4, 9.5, 1, -4, 9.5, 1.5, -2, 9.5, 1, -4, 9.5, 1, -2, 9.5, 1.5, -2, 10, 1.5, -2, 10, 1, -2, 10, 1.5, -1, 10, 1, -2, 10, 1, -1, 10, 1.5, -1, 10, 2, -1, 10, 1, -1, 10, 2, 2, 10, 1, -1, 10, 1, 2, 10, 2, 2, 2.5, 2, -4.5, 2.5, 1.5, -4.5, 2.5, 2, -4, 2.5, 1.5, -4.5, 2.5, 1.5, -4, 2.5, 2, -4, 0.5, 2, -4, 0.5, 1.5, -4, 0.5, 2, -3.5, 0.5, 1.5, -4, 0.5, 1.5, -3.5, 0.5, 2, -3.5, -1.5, 2, -3.5, -1.5, 1.5, -3.5, -1.5, 2, -3, -1.5, 1.5, -3.5, -1.5, 1.5, -3, -1.5, 2, -3, -3, 2, -3, -3, 1.5, -3, -3, 2, -2, -3, 1.5, -3, -3, 1.5, -2, -3, 2, -2, -4.5, 2, -2, -4.5, 1.5, -2, -4.5, 2, -1.5, -4.5, 1.5, -2, -4.5, 1.5, -1.5, -4.5, 2, -1.5, -5, 2, -1.5, -5, 1.5, -1.5, -5, 2, -1, -5, 1.5, -1.5, -5, 1.5, -1, -5, 2, -1, -8.5, 2, 1.5, -8.5, 1.5, 1.5, -8.5, 2, 2.5, -8.5, 1.5, 1.5, -8.5, 1.5, 2.5, -8.5, 2, 2.5, 1.5, 2.5, -9.5, 1.5, 2, -9.5, 1.5, 2.5, -5.5, 1.5, 2, -9.5, 1.5, 2, -5.5, 1.5, 2.5, -5.5, -5, 2.5, -5.5, -5, 2, -5.5, -5, 2.5, -2, -5, 2, -5.5, -5, 2, -2, -5, 2.5, -2, 8.5, 2.5, 1.5, 8.5, 2, 1.5, 8.5, 2.5, 4.5, 8.5, 2, 1.5, 8.5, 2, 4.5, 8.5, 2.5, 4.5, -3.5, 2.5, 3, -3.5, 2, 3, -3.5, 2.5, 4, -3.5, 2, 3, -3.5, 2, 4, -3.5, 2.5, 4, -2.5, 2.5, 4, -2.5, 2, 4, -2.5, 2.5, 7, -2.5, 2, 4, -2.5, 2, 7, -2.5, 2.5, 7, 6, 2.5, 4.5, 6, 2, 4.5, 6, 2.5, 5.5, 6, 2, 4.5, 6, 2, 5.5, 6, 2.5, 5.5, 4.5, 2.5, 5.5, 4.5, 2, 5.5, 4.5, 2.5, 6, 4.5, 2, 5.5, 4.5, 2, 6, 4.5, 2.5, 6, 0, 3, -9, 0, 2.5, -9, 0, 3, -6, 0, 2.5, -9, 0, 2.5, -6, 0, 3, -6, 5.5, 3, 1.5, 5.5, 2.5, 1.5, 5.5, 3, 5, 5.5, 2.5, 1.5, 5.5, 2.5, 5, 5.5, 3, 5, 4, 3.5, 5, 4, 2.5, 5, 4, 3.5, 5.5, 4, 2.5, 5, 4, 2.5, 5.5, 4, 3.5, 5.5, 5, 3.5, 1.5, 5, 3, 1.5, 5, 3.5, 4.5, 5, 3, 1.5, 5, 3, 4.5, 5, 3.5, 4.5, 4.5, 4, 4.5, 4.5, 3, 4.5, 4.5, 4, 5, 4.5, 3, 4.5, 4.5, 3, 5, 4.5, 4, 5, 4.5, 4, 1.5, 4.5, 3.5, 1.5, 4.5, 4, 4.5, 4.5, 3.5, 1.5, 4.5, 3.5, 4.5, 4.5, 4, 4.5, 4.5, 5, 1.5, 4.5, 4, 1.5, 4.5, 5, 4, 4.5, 4, 1.5, 4.5, 4, 4, 4.5, 5, 4, 4.5, 4.5, 4, 4.5, 4, 4, 4.5, 4.5, 5, 4.5, 4, 4, 4.5, 4, 5, 4.5, 4.5, 5, 4.5, 5, 4, 4.5, 4.5, 4, 4.5, 5, 4.5, 4.5, 4.5, 4, 4.5, 4.5, 4.5, 4.5, 5, 4.5, 4.5, 5.5, 2, 4.5, 5, 2, 4.5, 5.5, 4, 4.5, 5, 2, 4.5, 5, 4, 4.5, 5.5, 4, 2.5, 1.5, -4, 2.5, 1.5, -4.5, 9, 1.5, -4, 2.5, 1.5, -4.5, 9, 1.5, -4.5, 9, 1.5, -4, 0.5, 1.5, -3.5, 0.5, 1.5, -4, 9.5, 1.5, -3.5, 0.5, 1.5, -4, 9.5, 1.5, -4, 9.5, 1.5, -3.5, -1.5, 1.5, -3, -1.5, 1.5, -3.5, 9.5, 1.5, -3, -1.5, 1.5, -3.5, 9.5, 1.5, -3.5, 9.5, 1.5, -3, -3, 1.5, -2, -3, 1.5, -3, 9.5, 1.5, -2, -3, 1.5, -3, 9.5, 1.5, -3, 9.5, 1.5, -2, -4.5, 1.5, -1.5, -4.5, 1.5, -2, 10, 1.5, -1.5, -4.5, 1.5, -2, 10, 1.5, -2, 10, 1.5, -1.5, -10, 1.5, 1.5, -10, 1.5, -2, -8.5, 1.5, 1.5, -10, 1.5, -2, -8.5, 1.5, -2, -8.5, 1.5, 1.5, -5, 1.5, -1, -5, 1.5, -1.5, 10, 1.5, -1, -5, 1.5, -1.5, 10, 1.5, -1.5, 10, 1.5, -1, -8.5, 1.5, 2.5, -8.5, 1.5, -1.5, -8, 1.5, 2.5, -8.5, 1.5, -1.5, -8, 1.5, -1.5, -8, 1.5, 2.5, -8, 1.5, -0.5, -8, 1.5, -1, 4.5, 1.5, -0.5, -8, 1.5, -1, 4.5, 1.5, -1, 4.5, 1.5, -0.5, -8, 1.5, 0, -8, 1.5, -0.5, 3.5, 1.5, 0, -8, 1.5, -0.5, 3.5, 1.5, -0.5, 3.5, 1.5, 0, -8, 1.5, 0.5, -8, 1.5, 0, 3, 1.5, 0.5, -8, 1.5, 0, 3, 1.5, 0, 3, 1.5, 0.5, -8, 1.5, 1, -8, 1.5, 0.5, 2.5, 1.5, 1, -8, 1.5, 0.5, 2.5, 1.5, 0.5, 2.5, 1.5, 1, -8, 1.5, 1.5, -8, 1.5, 1, -1, 1.5, 1.5, -8, 1.5, 1, -1, 1.5, 1, -1, 1.5, 1.5, -8, 1.5, 2, -8, 1.5, 1.5, -2.5, 1.5, 2, -8, 1.5, 1.5, -2.5, 1.5, 1.5, -2.5, 1.5, 2, -8, 1.5, 2.5, -8, 1.5, 2, -3, 1.5, 2.5, -8, 1.5, 2, -3, 1.5, 2, -3, 1.5, 2.5, 1.5, 2, -5.5, 1.5, 2, -9.5, 4, 2, -5.5, 1.5, 2, -9.5, 4, 2, -9.5, 4, 2, -5.5, 4, 2, -5.5, 4, 2, -9, 5, 2, -5.5, 4, 2, -9, 5, 2, -9, 5, 2, -5.5, 5, 2, -5.5, 5, 2, -8.5, 5.5, 2, -5.5, 5, 2, -8.5, 5.5, 2, -8.5, 5.5, 2, -5.5, -5.5, 2, -8, -5.5, 2, -8.5, -5, 2, -8, -5.5, 2, -8.5, -5, 2, -8.5, -5, 2, -8, 5.5, 2, -5.5, 5.5, 2, -8, 6.5, 2, -5.5, 5.5, 2, -8, 6.5, 2, -8, 6.5, 2, -5.5, -6.5, 2, -7.5, -6.5, 2, -8, -5, 2, -7.5, -6.5, 2, -8, -5, 2, -8, -5, 2, -7.5, 6.5, 2, -5.5, 6.5, 2, -7.5, 7, 2, -5.5, 6.5, 2, -7.5, 7, 2, -7.5, 7, 2, -5.5, -7, 2, -7, -7, 2, -7.5, -6, 2, -7, -7, 2, -7.5, -6, 2, -7.5, -6, 2, -7, 7, 2, -5.5, 7, 2, -7, 7.5, 2, -5.5, 7, 2, -7, 7.5, 2, -7, 7.5, 2, -5.5, -7.5, 2, -6.5, -7.5, 2, -7, -6, 2, -6.5, -7.5, 2, -7, -6, 2, -7, -6, 2, -6.5, 7.5, 2, -5.5, 7.5, 2, -6.5, 8, 2, -5.5, 7.5, 2, -6.5, 8, 2, -6.5, 8, 2, -5.5, -8, 2, -5.5, -8, 2, -6.5, -6, 2, -5.5, -8, 2, -6.5, -6, 2, -6.5, -6, 2, -5.5, -5, 2, -4.5, -5, 2, -5.5, 8.5, 2, -4.5, -5, 2, -5.5, 8.5, 2, -5.5, 8.5, 2, -4.5, -8.5, 2, -5, -8.5, 2, -5.5, -6, 2, -5, -8.5, 2, -5.5, -6, 2, -5.5, -6, 2, -5, 8.5, 2, -4.5, 8.5, 2, -5, 9, 2, -4.5, 8.5, 2, -5, 9, 2, -5, 9, 2, -4.5, -9, 2, -4.5, -9, 2, -5, -6, 2, -4.5, -9, 2, -5, -6, 2, -5, -6, 2, -4.5, -5, 2, -4, -5, 2, -4.5, 2.5, 2, -4, -5, 2, -4.5, 2.5, 2, -4.5, 2.5, 2, -4, -9, 2, -4, -9, 2, -4.5, -8, 2, -4, -9, 2, -4.5, -8, 2, -4.5, -8, 2, -4, -5, 2, -3.5, -5, 2, -4, 0.5, 2, -3.5, -5, 2, -4, 0.5, 2, -4, 0.5, 2, -3.5, -9.5, 2, -2, -9.5, 2, -4, -8, 2, -2, -9.5, 2, -4, -8, 2, -4, -8, 2, -2, -5, 2, -3, -5, 2, -3.5, -1.5, 2, -3, -5, 2, -3.5, -1.5, 2, -3.5, -1.5, 2, -3, -5, 2, -2, -5, 2, -3, -3, 2, -2, -5, 2, -3, -3, 2, -3, -3, 2, -2, -8.5, 2, -1.5, -8.5, 2, -2, -4.5, 2, -1.5, -8.5, 2, -2, -4.5, 2, -2, -4.5, 2, -1.5, -8, 2, -1, -8, 2, -1.5, -5, 2, -1, -8, 2, -1.5, -5, 2, -1.5, -5, 2, -1, 4.5, 2, -0.5, 4.5, 2, -1, 10, 2, -0.5, 4.5, 2, -1, 10, 2, -1, 10, 2, -0.5, 3.5, 2, 0, 3.5, 2, -0.5, 10, 2, 0, 3.5, 2, -0.5, 10, 2, -0.5, 10, 2, 0, 3, 2, 0.5, 3, 2, 0, 10, 2, 0.5, 3, 2, 0, 10, 2, 0, 10, 2, 0.5, 2.5, 2, 1, 2.5, 2, 0.5, 10, 2, 1, 2.5, 2, 0.5, 10, 2, 0.5, 10, 2, 1, -1, 2, 1.5, -1, 2, 1, 10, 2, 1.5, -1, 2, 1, 10, 2, 1, 10, 2, 1.5, 8.5, 2, 2, 8.5, 2, 1.5, 10, 2, 2, 8.5, 2, 1.5, 10, 2, 1.5, 10, 2, 2, -2.5, 2, 2, -2.5, 2, 1.5, -1, 2, 2, -2.5, 2, 1.5, -1, 2, 1.5, -1, 2, 2, -10, 2, 2, -10, 2, 1.5, -8.5, 2, 2, -10, 2, 1.5, -8.5, 2, 1.5, -8.5, 2, 2, 8.5, 2, 4, 8.5, 2, 2, 9.5, 2, 4, 8.5, 2, 2, 9.5, 2, 2, 9.5, 2, 4, -3, 2, 2.5, -3, 2, 2, -2, 2, 2.5, -3, 2, 2, -2, 2, 2, -2, 2, 2.5, -9.5, 2, 4, -9.5, 2, 2, -8.5, 2, 4, -9.5, 2, 2, -8.5, 2, 2, -8.5, 2, 4, -8.5, 2, 3, -8.5, 2, 2.5, -2, 2, 3, -8.5, 2, 2.5, -2, 2, 2.5, -2, 2, 3, -3.5, 2, 4, -3.5, 2, 3, -2, 2, 4, -3.5, 2, 3, -2, 2, 3, -2, 2, 4, 8.5, 2, 4.5, 8.5, 2, 4, 9, 2, 4.5, 8.5, 2, 4, 9, 2, 4, 9, 2, 4.5, -2.5, 2, 7, -2.5, 2, 4, -2, 2, 7, -2.5, 2, 4, -2, 2, 4, -2, 2, 7, -9, 2, 5, -9, 2, 4, -7, 2, 5, -9, 2, 4, -7, 2, 4, -7, 2, 5, 6, 2, 5, 6, 2, 4.5, 9, 2, 5, 6, 2, 4.5, 9, 2, 4.5, 9, 2, 5, 6, 2, 5.5, 6, 2, 5, 8.5, 2, 5.5, 6, 2, 5, 8.5, 2, 5, 8.5, 2, 5.5, -2, 2, 7, -2, 2, 5, -1.5, 2, 7, -2, 2, 5, -1.5, 2, 5, -1.5, 2, 7, -8.5, 2, 5.5, -8.5, 2, 5, -7, 2, 5.5, -8.5, 2, 5, -7, 2, 5, -7, 2, 5.5, 4.5, 2, 6, 4.5, 2, 5.5, 8, 2, 6, 4.5, 2, 5.5, 8, 2, 5.5, 8, 2, 6, -1.5, 2, 7, -1.5, 2, 5.5, -1, 2, 7, -1.5, 2, 5.5, -1, 2, 5.5, -1, 2, 7, -8, 2, 6.5, -8, 2, 5.5, -7, 2, 6.5, -8, 2, 5.5, -7, 2, 5.5, -7, 2, 6.5, -1, 2, 6.5, -1, 2, 6, 8, 2, 6.5, -1, 2, 6, 8, 2, 6, 8, 2, 6.5, -1, 2, 7, -1, 2, 6.5, 7.5, 2, 7, -1, 2, 6.5, 7.5, 2, 6.5, 7.5, 2, 7, -7.5, 2, 7, -7.5, 2, 6.5, -7, 2, 7, -7.5, 2, 6.5, -7, 2, 6.5, -7, 2, 7, -7, 2, 7.5, -7, 2, 7, 7, 2, 7.5, -7, 2, 7, 7, 2, 7, 7, 2, 7.5, -6.5, 2, 8, -6.5, 2, 7.5, 6.5, 2, 8, -6.5, 2, 7.5, 6.5, 2, 7.5, 6.5, 2, 8, -5.5, 2, 8.5, -5.5, 2, 8, 5.5, 2, 8.5, -5.5, 2, 8, 5.5, 2, 8, 5.5, 2, 8.5, -5, 2, 9, -5, 2, 8.5, 5, 2, 9, -5, 2, 8.5, 5, 2, 8.5, 5, 2, 9, -4, 2, 9.5, -4, 2, 9, 4, 2, 9.5, -4, 2, 9, 4, 2, 9, 4, 2, 9.5, -2, 2, 10, -2, 2, 9.5, 2, 2, 10, -2, 2, 9.5, 2, 2, 9.5, 2, 2, 10, -2, 2.5, -9.5, -2, 2.5, -10, 2, 2.5, -9.5, -2, 2.5, -10, 2, 2.5, -10, 2, 2.5, -9.5, -4, 2.5, -9, -4, 2.5, -9.5, 1.5, 2.5, -9, -4, 2.5, -9.5, 1.5, 2.5, -9.5, 1.5, 2.5, -9, 0, 2.5, -6, 0, 2.5, -9, 1.5, 2.5, -6, 0, 2.5, -9, 1.5, 2.5, -9, 1.5, 2.5, -6, -5, 2.5, -7.5, -5, 2.5, -9, -4.5, 2.5, -7.5, -5, 2.5, -9, -4.5, 2.5, -9, -4.5, 2.5, -7.5, -6, 2.5, -5.5, -6, 2.5, -7.5, -4.5, 2.5, -5.5, -6, 2.5, -7.5, -4.5, 2.5, -7.5, -4.5, 2.5, -5.5, -4.5, 2.5, -5.5, -4.5, 2.5, -6, 1.5, 2.5, -5.5, -4.5, 2.5, -6, 1.5, 2.5, -6, 1.5, 2.5, -5.5, -6, 2.5, -4.5, -6, 2.5, -5.5, -5, 2.5, -4.5, -6, 2.5, -5.5, -5, 2.5, -5.5, -5, 2.5, -4.5, -8, 2.5, -2, -8, 2.5, -4.5, -5, 2.5, -2, -8, 2.5, -4.5, -5, 2.5, -4.5, -5, 2.5, -2, 5.5, 2.5, 4.5, 5.5, 2.5, 1.5, 8.5, 2.5, 4.5, 5.5, 2.5, 1.5, 8.5, 2.5, 1.5, 8.5, 2.5, 4.5, -8.5, 2.5, 4, -8.5, 2.5, 3, -3.5, 2.5, 4, -8.5, 2.5, 3, -3.5, 2.5, 3, -3.5, 2.5, 4, -7, 2.5, 7, -7, 2.5, 4, -2.5, 2.5, 7, -7, 2.5, 4, -2.5, 2.5, 4, -2.5, 2.5, 7, 5.5, 2.5, 5, 5.5, 2.5, 4.5, 6, 2.5, 5, 5.5, 2.5, 4.5, 6, 2.5, 4.5, 6, 2.5, 5, 4, 2.5, 5.5, 4, 2.5, 5, 6, 2.5, 5.5, 4, 2.5, 5, 6, 2.5, 5, 6, 2.5, 5.5, -1, 2.5, 6, -1, 2.5, 5.5, 4.5, 2.5, 6, -1, 2.5, 5.5, 4.5, 2.5, 5.5, 4.5, 2.5, 6, -4.5, 3, -6, -4.5, 3, -9, 0, 3, -6, -4.5, 3, -9, 0, 3, -9, 0, 3, -6, 5, 3, 4.5, 5, 3, 1.5, 5.5, 3, 4.5, 5, 3, 1.5, 5.5, 3, 1.5, 5.5, 3, 4.5, -2, 3, 5, -2, 3, 4, -1.5, 3, 5, -2, 3, 4, -1.5, 3, 4, -1.5, 3, 5, 4.5, 3, 5, 4.5, 3, 4.5, 5.5, 3, 5, 4.5, 3, 4.5, 5.5, 3, 4.5, 5.5, 3, 5, -1.5, 3, 5.5, -1.5, 3, 5, -1, 3, 5.5, -1.5, 3, 5, -1, 3, 5, -1, 3, 5.5, 4.5, 3.5, 4.5, 4.5, 3.5, 1.5, 5, 3.5, 4.5, 4.5, 3.5, 1.5, 5, 3.5, 1.5, 5, 3.5, 4.5, -1.5, 3.5, 5, -1.5, 3.5, 4.5, -1, 3.5, 5, -1.5, 3.5, 4.5, -1, 3.5, 4.5, -1, 3.5, 5, -1, 3.5, 5.5, -1, 3.5, 5, 4, 3.5, 5.5, -1, 3.5, 5, 4, 3.5, 5, 4, 3.5, 5.5, -2, 4, 4, -2, 4, 3.5, -1.5, 4, 4, -2, 4, 3.5, -1.5, 4, 3.5, -1.5, 4, 4, -1.5, 4, 4.5, -1.5, 4, 4, -1, 4, 4.5, -1.5, 4, 4, -1, 4, 4, -1, 4, 4.5, -2, 4.5, 3.5, -2, 4.5, 2, -1.5, 4.5, 3.5, -2, 4.5, 2, -1.5, 4.5, 2, -1.5, 4.5, 3.5, -1, 4.5, 5, -1, 4.5, 4.5, 4.5, 4.5, 5, -1, 4.5, 4.5, 4.5, 4.5, 4.5, 4.5, 4.5, 5, -1, 5, 2, -1, 5, 1.5, 4.5, 5, 2, -1, 5, 1.5, 4.5, 5, 1.5, 4.5, 5, 2, -1.5, 5, 4, -1.5, 5, 2, -1, 5, 4, -1.5, 5, 2, -1, 5, 2, -1, 5, 4, -1, 5, 4.5, -1, 5, 4, 4.5, 5, 4.5, -1, 5, 4, 4.5, 5, 4, 4.5, 5, 4.5, -1, 5.5, 4, -1, 5.5, 2, 4.5, 5.5, 4, -1, 5.5, 2, 4.5, 5.5, 2, 4.5, 5.5, 4, 2, 0, -10, 2, 2.5, -10, -2, 0, -10, 2, 2.5, -10, -2, 2.5, -10, -2, 0, -10, 4, 0, -9.5, 4, 2, -9.5, 2, 0, -9.5, 4, 2, -9.5, 2, 2, -9.5, 2, 0, -9.5, -2, 0, -9.5, -2, 2.5, -9.5, -4, 0, -9.5, -2, 2.5, -9.5, -4, 2.5, -9.5, -4, 0, -9.5, 5, 0, -9, 5, 2, -9, 4, 0, -9, 5, 2, -9, 4, 2, -9, 4, 0, -9, -4, 0, -9, -4, 2.5, -9, -5, 0, -9, -4, 2.5, -9, -5, 2.5, -9, -5, 0, -9, 5.5, 0, -8.5, 5.5, 2, -8.5, 5, 0, -8.5, 5.5, 2, -8.5, 5, 2, -8.5, 5, 0, -8.5, -5, 0, -8.5, -5, 2, -8.5, -5.5, 0, -8.5, -5, 2, -8.5, -5.5, 2, -8.5, -5.5, 0, -8.5, 6.5, 0, -8, 6.5, 2, -8, 5.5, 0, -8, 6.5, 2, -8, 5.5, 2, -8, 5.5, 0, -8, -5.5, 0, -8, -5.5, 2, -8, -6.5, 0, -8, -5.5, 2, -8, -6.5, 2, -8, -6.5, 0, -8, 7, 0, -7.5, 7, 2, -7.5, 6.5, 0, -7.5, 7, 2, -7.5, 6.5, 2, -7.5, 6.5, 0, -7.5, -6.5, 0, -7.5, -6.5, 2, -7.5, -7, 0, -7.5, -6.5, 2, -7.5, -7, 2, -7.5, -7, 0, -7.5, 7.5, 0, -7, 7.5, 2, -7, 7, 0, -7, 7.5, 2, -7, 7, 2, -7, 7, 0, -7, -7, 0, -7, -7, 2, -7, -7.5, 0, -7, -7, 2, -7, -7.5, 2, -7, -7.5, 0, -7, 8, 0, -6.5, 8, 2, -6.5, 7.5, 0, -6.5, 8, 2, -6.5, 7.5, 2, -6.5, 7.5, 0, -6.5, -7.5, 0, -6.5, -7.5, 2, -6.5, -8, 0, -6.5, -7.5, 2, -6.5, -8, 2, -6.5, -8, 0, -6.5, 8.5, 0, -5.5, 8.5, 2, -5.5, 8, 0, -5.5, 8.5, 2, -5.5, 8, 2, -5.5, 8, 0, -5.5, -8, 0, -5.5, -8, 2, -5.5, -8.5, 0, -5.5, -8, 2, -5.5, -8.5, 2, -5.5, -8.5, 0, -5.5, 9, 0, -5, 9, 2, -5, 8.5, 0, -5, 9, 2, -5, 8.5, 2, -5, 8.5, 0, -5, -8.5, 0, -5, -8.5, 2, -5, -9, 0, -5, -8.5, 2, -5, -9, 2, -5, -9, 0, -5, 9.5, 0, -4, 9.5, 1, -4, 9, 0, -4, 9.5, 1, -4, 9, 1, -4, 9, 0, -4, -9, 0, -4, -9, 2, -4, -9.5, 0, -4, -9, 2, -4, -9.5, 2, -4, -9.5, 0, -4, 10, 0, -2, 10, 1, -2, 9.5, 0, -2, 10, 1, -2, 9.5, 1, -2, 9.5, 0, -2, -9.5, 0, -2, -9.5, 1, -2, -10, 0, -2, -9.5, 1, -2, -10, 1, -2, -10, 0, -2, 9.5, 1, -4, 9.5, 1.5, -4, 9, 1, -4, 9.5, 1.5, -4, 9, 1.5, -4, 9, 1, -4, 10, 1, -2, 10, 1.5, -2, 9.5, 1, -2, 10, 1.5, -2, 9.5, 1.5, -2, 9.5, 1, -2, -9.5, 1, -2, -9.5, 1.5, -2, -10, 1, -2, -9.5, 1.5, -2, -10, 1.5, -2, -10, 1, -2, 10, 1.5, -1, 10, 2, -1, 4.5, 1.5, -1, 10, 2, -1, 4.5, 2, -1, 4.5, 1.5, -1, 4.5, 1.5, -0.5, 4.5, 2, -0.5, 3.5, 1.5, -0.5, 4.5, 2, -0.5, 3.5, 2, -0.5, 3.5, 1.5, -0.5, 3.5, 1.5, 0, 3.5, 2, 0, 3, 1.5, 0, 3.5, 2, 0, 3, 2, 0, 3, 1.5, 0, 3, 1.5, 0.5, 3, 2, 0.5, 2.5, 1.5, 0.5, 3, 2, 0.5, 2.5, 2, 0.5, 2.5, 1.5, 0.5, 2.5, 1.5, 1, 2.5, 2, 1, -1, 1.5, 1, 2.5, 2, 1, -1, 2, 1, -1, 1.5, 1, -1, 1.5, 1.5, -1, 2, 1.5, -2.5, 1.5, 1.5, -1, 2, 1.5, -2.5, 2, 1.5, -2.5, 1.5, 1.5, -8.5, 1.5, 1.5, -8.5, 2, 1.5, -10, 1.5, 1.5, -8.5, 2, 1.5, -10, 2, 1.5, -10, 1.5, 1.5, -2.5, 1.5, 2, -2.5, 2, 2, -3, 1.5, 2, -2.5, 2, 2, -3, 2, 2, -3, 1.5, 2, -3, 1.5, 2.5, -3, 2, 2.5, -8.5, 1.5, 2.5, -3, 2, 2.5, -8.5, 2, 2.5, -8.5, 1.5, 2.5, -5, 2, -7.5, -5, 2.5, -7.5, -6, 2, -7.5, -5, 2.5, -7.5, -6, 2.5, -7.5, -6, 2, -7.5, -6, 2, -4.5, -6, 2.5, -4.5, -8, 2, -4.5, -6, 2.5, -4.5, -8, 2.5, -4.5, -8, 2, -4.5, 8.5, 2, 1.5, 8.5, 2.5, 1.5, -1, 2, 1.5, 8.5, 2.5, 1.5, -1, 2.5, 1.5, -1, 2, 1.5, -1, 2, 2, -1, 4.5, 2, -1.5, 2, 2, -1, 4.5, 2, -1.5, 4.5, 2, -1.5, 2, 2, -1.5, 2, 2, -1.5, 4.5, 2, -2, 2, 2, -1.5, 4.5, 2, -2, 4.5, 2, -2, 2, 2, -3.5, 2, 3, -3.5, 2.5, 3, -8.5, 2, 3, -3.5, 2.5, 3, -8.5, 2.5, 3, -8.5, 2, 3, -2.5, 2, 4, -2.5, 2.5, 4, -3.5, 2, 4, -2.5, 2.5, 4, -3.5, 2.5, 4, -3.5, 2, 4, 0, 2.5, -9, 0, 3, -9, -4.5, 2.5, -9, 0, 3, -9, -4.5, 3, -9, -4.5, 2.5, -9, 5.5, 2.5, 1.5, 5.5, 3, 1.5, -1, 2.5, 1.5, 5.5, 3, 1.5, -1, 3, 1.5, -1, 2.5, 1.5, 5, 3, 1.5, 5, 3.5, 1.5, -1, 3, 1.5, 5, 3.5, 1.5, -1, 3.5, 1.5, -1, 3, 1.5, 4.5, 3.5, 1.5, 4.5, 5, 1.5, -1, 3.5, 1.5, 4.5, 5, 1.5, -1, 5, 1.5, -1, 3.5, 1.5, -1, 4.5, 2, -1, 5, 2, -1.5, 4.5, 2, -1, 5, 2, -1.5, 5, 2, -1.5, 4.5, 2, 4.5, 5, 2, 4.5, 5.5, 2, -1, 5, 2, 4.5, 5.5, 2, -1, 5.5, 2, -1, 5, 2, -2, 0, -10, -2, 2.5, -10, -2, 0, -9.5, -2, 2.5, -10, -2, 2.5, -9.5, -2, 0, -9.5, -4, 0, -9.5, -4, 2.5, -9.5, -4, 0, -9, -4, 2.5, -9.5, -4, 2.5, -9, -4, 0, -9, -5, 0, -9, -5, 2.5, -9, -5, 0, -8.5, -5, 2.5, -9, -5, 2.5, -8.5, -5, 0, -8.5, -5.5, 0, -8.5, -5.5, 2, -8.5, -5.5, 0, -8, -5.5, 2, -8.5, -5.5, 2, -8, -5.5, 0, -8, -6.5, 0, -8, -6.5, 2, -8, -6.5, 0, -7.5, -6.5, 2, -8, -6.5, 2, -7.5, -6.5, 0, -7.5, -7, 0, -7.5, -7, 2, -7.5, -7, 0, -7, -7, 2, -7.5, -7, 2, -7, -7, 0, -7, -7.5, 0, -7, -7.5, 2, -7, -7.5, 0, -6.5, -7.5, 2, -7, -7.5, 2, -6.5, -7.5, 0, -6.5, -8, 0, -6.5, -8, 2, -6.5, -8, 0, -5.5, -8, 2, -6.5, -8, 2, -5.5, -8, 0, -5.5, -8.5, 0, -5.5, -8.5, 2, -5.5, -8.5, 0, -5, -8.5, 2, -5.5, -8.5, 2, -5, -8.5, 0, -5, -9, 0, -5, -9, 2, -5, -9, 0, -4, -9, 2, -5, -9, 2, -4, -9, 0, -4, -9.5, 0, -4, -9.5, 2, -4, -9.5, 0, -2, -9.5, 2, -4, -9.5, 2, -2, -9.5, 0, -2, -10, 0, -2, -10, 1, -2, -10, 0, 2, -10, 1, -2, -10, 1, 2, -10, 0, 2, -9.5, 0, 2, -9.5, 2, 2, -9.5, 0, 4, -9.5, 2, 2, -9.5, 2, 4, -9.5, 0, 4, -9, 0, 4, -9, 2, 4, -9, 0, 5, -9, 2, 4, -9, 2, 5, -9, 0, 5, -8.5, 0, 5, -8.5, 2, 5, -8.5, 0, 5.5, -8.5, 2, 5, -8.5, 2, 5.5, -8.5, 0, 5.5, -8, 0, 5.5, -8, 2, 5.5, -8, 0, 6.5, -8, 2, 5.5, -8, 2, 6.5, -8, 0, 6.5, -7.5, 0, 6.5, -7.5, 2, 6.5, -7.5, 0, 7, -7.5, 2, 6.5, -7.5, 2, 7, -7.5, 0, 7, -7, 0, 7, -7, 2, 7, -7, 0, 7.5, -7, 2, 7, -7, 2, 7.5, -7, 0, 7.5, -6.5, 0, 7.5, -6.5, 2, 7.5, -6.5, 0, 8, -6.5, 2, 7.5, -6.5, 2, 8, -6.5, 0, 8, -5.5, 0, 8, -5.5, 2, 8, -5.5, 0, 8.5, -5.5, 2, 8, -5.5, 2, 8.5, -5.5, 0, 8.5, -5, 0, 8.5, -5, 2, 8.5, -5, 0, 9, -5, 2, 8.5, -5, 2, 9, -5, 0, 9, -4, 0, 9, -4, 2, 9, -4, 0, 9.5, -4, 2, 9, -4, 2, 9.5, -4, 0, 9.5, -2, 0, 9.5, -2, 2, 9.5, -2, 0, 10, -2, 2, 9.5, -2, 2, 10, -2, 0, 10, -10, 1, -2, -10, 1.5, -2, -10, 1, 1.5, -10, 1.5, -2, -10, 1.5, 1.5, -10, 1, 1.5, -10, 1, 1.5, -10, 2, 1.5, -10, 1, 2, -10, 2, 1.5, -10, 2, 2, -10, 1, 2, -8.5, 1.5, -2, -8.5, 2, -2, -8.5, 1.5, -1.5, -8.5, 2, -2, -8.5, 2, -1.5, -8.5, 1.5, -1.5, -8, 1.5, -1.5, -8, 2, -1.5, -8, 1.5, -1, -8, 2, -1.5, -8, 2, -1, -8, 1.5, -1, 4.5, 1.5, -1, 4.5, 2, -1, 4.5, 1.5, -0.5, 4.5, 2, -1, 4.5, 2, -0.5, 4.5, 1.5, -0.5, 3.5, 1.5, -0.5, 3.5, 2, -0.5, 3.5, 1.5, 0, 3.5, 2, -0.5, 3.5, 2, 0, 3.5, 1.5, 0, 3, 1.5, 0, 3, 2, 0, 3, 1.5, 0.5, 3, 2, 0, 3, 2, 0.5, 3, 1.5, 0.5, 2.5, 1.5, 0.5, 2.5, 2, 0.5, 2.5, 1.5, 1, 2.5, 2, 0.5, 2.5, 2, 1, 2.5, 1.5, 1, -1, 1.5, 1, -1, 2, 1, -1, 1.5, 1.5, -1, 2, 1, -1, 2, 1.5, -1, 1.5, 1.5, -2.5, 1.5, 1.5, -2.5, 2, 1.5, -2.5, 1.5, 2, -2.5, 2, 1.5, -2.5, 2, 2, -2.5, 1.5, 2, -3, 1.5, 2, -3, 2, 2, -3, 1.5, 2.5, -3, 2, 2, -3, 2, 2.5, -3, 1.5, 2.5, -5, 2, -8.5, -5, 2.5, -8.5, -5, 2, -7.5, -5, 2.5, -8.5, -5, 2.5, -7.5, -5, 2, -7.5, -6, 2, -7.5, -6, 2.5, -7.5, -6, 2, -4.5, -6, 2.5, -7.5, -6, 2.5, -4.5, -6, 2, -4.5, -8, 2, -4.5, -8, 2.5, -4.5, -8, 2, -2, -8, 2.5, -4.5, -8, 2.5, -2, -8, 2, -2, -1, 2, 1.5, -1, 5, 1.5, -1, 2, 2, -1, 5, 1.5, -1, 5, 2, -1, 2, 2, -2, 2, 2, -2, 3, 2, -2, 2, 5, -2, 3, 2, -2, 3, 5, -2, 2, 5, -8.5, 2, 3, -8.5, 2.5, 3, -8.5, 2, 4, -8.5, 2.5, 3, -8.5, 2.5, 4, -8.5, 2, 4, -7, 2, 4, -7, 2.5, 4, -7, 2, 7, -7, 2.5, 4, -7, 2.5, 7, -7, 2, 7, -1.5, 2, 5, -1.5, 3, 5, -1.5, 2, 5.5, -1.5, 3, 5, -1.5, 3, 5.5, -1.5, 2, 5.5, -1, 2, 5.5, -1, 2.5, 5.5, -1, 2, 6, -1, 2.5, 5.5, -1, 2.5, 6, -1, 2, 6, -4.5, 2.5, -9, -4.5, 3, -9, -4.5, 2.5, -6, -4.5, 3, -9, -4.5, 3, -6, -4.5, 2.5, -6, -2, 3, 2, -2, 4, 2, -2, 3, 4, -2, 4, 2, -2, 4, 4, -2, 3, 4, -1.5, 3, 4, -1.5, 3.5, 4, -1.5, 3, 5, -1.5, 3.5, 4, -1.5, 3.5, 5, -1.5, 3, 5, -1, 3, 5, -1, 3.5, 5, -1, 3, 5.5, -1, 3.5, 5, -1, 3.5, 5.5, -1, 3, 5.5, -1.5, 3.5, 4, -1.5, 4, 4, -1.5, 3.5, 4.5, -1.5, 4, 4, -1.5, 4, 4.5, -1.5, 3.5, 4.5, -1, 3.5, 4.5, -1, 4, 4.5, -1, 3.5, 5, -1, 4, 4.5, -1, 4, 5, -1, 3.5, 5, -2, 4, 2, -2, 4.5, 2, -2, 4, 3.5, -2, 4.5, 2, -2, 4.5, 3.5, -2, 4, 3.5, -1.5, 4, 3.5, -1.5, 4.5, 3.5, -1.5, 4, 4, -1.5, 4.5, 3.5, -1.5, 4.5, 4, -1.5, 4, 4, -1, 4, 4, -1, 4.5, 4, -1, 4, 5, -1, 4.5, 4, -1, 4.5, 5, -1, 4, 5, -1.5, 4.5, 2, -1.5, 5, 2, -1.5, 4.5, 4, -1.5, 5, 2, -1.5, 5, 4, -1.5, 4.5, 4, -1, 4.5, 4, -1, 5, 4, -1, 4.5, 4.5, -1, 5, 4, -1, 5, 4.5, -1, 4.5, 4.5, -1, 5, 2, -1, 5.5, 2, -1, 5, 4, -1, 5.5, 2, -1, 5.5, 4, -1, 5, 4, 2, 0, -9.5, 2, 0, -10, -2, 0, -9.5, 2, 0, -10, -2, 0, -10, -2, 0, -9.5, 4, 0, -9, 4, 0, -9.5, -4, 0, -9, 4, 0, -9.5, -4, 0, -9.5, -4, 0, -9, 5, 0, -8.5, 5, 0, -9, -5, 0, -8.5, 5, 0, -9, -5, 0, -9, -5, 0, -8.5, 5.5, 0, -8, 5.5, 0, -8.5, -5.5, 0, -8, 5.5, 0, -8.5, -5.5, 0, -8.5, -5.5, 0, -8, 6.5, 0, -7.5, 6.5, 0, -8, -6.5, 0, -7.5, 6.5, 0, -8, -6.5, 0, -8, -6.5, 0, -7.5, 7, 0, -7, 7, 0, -7.5, -7, 0, -7, 7, 0, -7.5, -7, 0, -7.5, -7, 0, -7, 7.5, 0, -6.5, 7.5, 0, -7, -7.5, 0, -6.5, 7.5, 0, -7, -7.5, 0, -7, -7.5, 0, -6.5, 8, 0, -5.5, 8, 0, -6.5, -8, 0, -5.5, 8, 0, -6.5, -8, 0, -6.5, -8, 0, -5.5, 8.5, 0, -5, 8.5, 0, -5.5, -8.5, 0, -5, 8.5, 0, -5.5, -8.5, 0, -5.5, -8.5, 0, -5, 9, 0, -4, 9, 0, -5, -9, 0, -4, 9, 0, -5, -9, 0, -5, -9, 0, -4, 9.5, 0, -2, 9.5, 0, -4, -9.5, 0, -2, 9.5, 0, -4, -9.5, 0, -4, -9.5, 0, -2, 10, 0, 2, 10, 0, -2, -10, 0, 2, 10, 0, -2, -10, 0, -2, -10, 0, 2, 9.5, 0, 4, 9.5, 0, 2, -9.5, 0, 4, 9.5, 0, 2, -9.5, 0, 2, -9.5, 0, 4, 9, 0, 5, 9, 0, 4, -9, 0, 5, 9, 0, 4, -9, 0, 4, -9, 0, 5, 8.5, 0, 5.5, 8.5, 0, 5, -8.5, 0, 5.5, 8.5, 0, 5, -8.5, 0, 5, -8.5, 0, 5.5, 8, 0, 6.5, 8, 0, 5.5, -8, 0, 6.5, 8, 0, 5.5, -8, 0, 5.5, -8, 0, 6.5, 7.5, 0, 7, 7.5, 0, 6.5, -7.5, 0, 7, 7.5, 0, 6.5, -7.5, 0, 6.5, -7.5, 0, 7, 7, 0, 7.5, 7, 0, 7, -7, 0, 7.5, 7, 0, 7, -7, 0, 7, -7, 0, 7.5, 6.5, 0, 8, 6.5, 0, 7.5, -6.5, 0, 8, 6.5, 0, 7.5, -6.5, 0, 7.5, -6.5, 0, 8, 5.5, 0, 8.5, 5.5, 0, 8, -5.5, 0, 8.5, 5.5, 0, 8, -5.5, 0, 8, -5.5, 0, 8.5, 5, 0, 9, 5, 0, 8.5, -5, 0, 9, 5, 0, 8.5, -5, 0, 8.5, -5, 0, 9, 4, 0, 9.5, 4, 0, 9, -4, 0, 9.5, 4, 0, 9, -4, 0, 9, -4, 0, 9.5, 2, 0, 10, 2, 0, 9.5, -2, 0, 10, 2, 0, 9.5, -2, 0, 9.5, -2, 0, 10, 10, 2, 2, 10, 0, 2, 9.5, 2, 2, 10, 0, 2, 9.5, 0, 2, 9.5, 2, 2, -9.5, 2, 2, -9.5, 0, 2, -10, 2, 2, -9.5, 0, 2, -10, 0, 2, -10, 2, 2, 9.5, 2, 4, 9.5, 0, 4, 9, 2, 4, 9.5, 0, 4, 9, 0, 4, 9, 2, 4, -9, 2, 4, -9, 0, 4, -9.5, 2, 4, -9, 0, 4, -9.5, 0, 4, -9.5, 2, 4, 9, 2, 5, 9, 0, 5, 8.5, 2, 5, 9, 0, 5, 8.5, 0, 5, 8.5, 2, 5, -8.5, 2, 5, -8.5, 0, 5, -9, 2, 5, -8.5, 0, 5, -9, 0, 5, -9, 2, 5, 8.5, 2, 5.5, 8.5, 0, 5.5, 8, 2, 5.5, 8.5, 0, 5.5, 8, 0, 5.5, 8, 2, 5.5, -8, 2, 5.5, -8, 0, 5.5, -8.5, 2, 5.5, -8, 0, 5.5, -8.5, 0, 5.5, -8.5, 2, 5.5, 8, 2, 6.5, 8, 0, 6.5, 7.5, 2, 6.5, 8, 0, 6.5, 7.5, 0, 6.5, 7.5, 2, 6.5, -7.5, 2, 6.5, -7.5, 0, 6.5, -8, 2, 6.5, -7.5, 0, 6.5, -8, 0, 6.5, -8, 2, 6.5, 7.5, 2, 7, 7.5, 0, 7, 7, 2, 7, 7.5, 0, 7, 7, 0, 7, 7, 2, 7, -7, 2, 7, -7, 0, 7, -7.5, 2, 7, -7, 0, 7, -7.5, 0, 7, -7.5, 2, 7, 7, 2, 7.5, 7, 0, 7.5, 6.5, 2, 7.5, 7, 0, 7.5, 6.5, 0, 7.5, 6.5, 2, 7.5, -6.5, 2, 7.5, -6.5, 0, 7.5, -7, 2, 7.5, -6.5, 0, 7.5, -7, 0, 7.5, -7, 2, 7.5, 6.5, 2, 8, 6.5, 0, 8, 5.5, 2, 8, 6.5, 0, 8, 5.5, 0, 8, 5.5, 2, 8, -5.5, 2, 8, -5.5, 0, 8, -6.5, 2, 8, -5.5, 0, 8, -6.5, 0, 8, -6.5, 2, 8, 5.5, 2, 8.5, 5.5, 0, 8.5, 5, 2, 8.5, 5.5, 0, 8.5, 5, 0, 8.5, 5, 2, 8.5, -5, 2, 8.5, -5, 0, 8.5, -5.5, 2, 8.5, -5, 0, 8.5, -5.5, 0, 8.5, -5.5, 2, 8.5, 5, 2, 9, 5, 0, 9, 4, 2, 9, 5, 0, 9, 4, 0, 9, 4, 2, 9, -4, 2, 9, -4, 0, 9, -5, 2, 9, -4, 0, 9, -5, 0, 9, -5, 2, 9, 4, 2, 9.5, 4, 0, 9.5, 2, 2, 9.5, 4, 0, 9.5, 2, 0, 9.5, 2, 2, 9.5, -2, 2, 9.5, -2, 0, 9.5, -4, 2, 9.5, -2, 0, 9.5, -4, 0, 9.5, -4, 2, 9.5, 2, 2, 10, 2, 0, 10, -2, 2, 10, 2, 0, 10, -2, 0, 10, -2, 2, 10, 9, 2, -4.5, 9, 1.5, -4.5, 2.5, 2, -4.5, 9, 1.5, -4.5, 2.5, 1.5, -4.5, 2.5, 2, -4.5, 2.5, 2, -4, 2.5, 1.5, -4, 0.5, 2, -4, 2.5, 1.5, -4, 0.5, 1.5, -4, 0.5, 2, -4, 0.5, 2, -3.5, 0.5, 1.5, -3.5, -1.5, 2, -3.5, 0.5, 1.5, -3.5, -1.5, 1.5, -3.5, -1.5, 2, -3.5, -1.5, 2, -3, -1.5, 1.5, -3, -3, 2, -3, -1.5, 1.5, -3, -3, 1.5, -3, -3, 2, -3, -3, 2, -2, -3, 1.5, -2, -4.5, 2, -2, -3, 1.5, -2, -4.5, 1.5, -2, -4.5, 2, -2, -8.5, 2, -2, -8.5, 1.5, -2, -9.5, 2, -2, -8.5, 1.5, -2, -9.5, 1.5, -2, -9.5, 2, -2, -4.5, 2, -1.5, -4.5, 1.5, -1.5, -5, 2, -1.5, -4.5, 1.5, -1.5, -5, 1.5, -1.5, -5, 2, -1.5, -8, 2, -1.5, -8, 1.5, -1.5, -8.5, 2, -1.5, -8, 1.5, -1.5, -8.5, 1.5, -1.5, -8.5, 2, -1.5, -5, 2, -1, -5, 1.5, -1, -8, 2, -1, -5, 1.5, -1, -8, 1.5, -1, -8, 2, -1, 2, 2.5, -9.5, 2, 2, -9.5, 1.5, 2.5, -9.5, 2, 2, -9.5, 1.5, 2, -9.5, 1.5, 2.5, -9.5, 1.5, 2.5, -5.5, 1.5, 2, -5.5, -5, 2.5, -5.5, 1.5, 2, -5.5, -5, 2, -5.5, -5, 2.5, -5.5, -5, 2.5, -2, -5, 2, -2, -8, 2.5, -2, -5, 2, -2, -8, 2, -2, -8, 2.5, -2, -7, 2.5, 4, -7, 2, 4, -8.5, 2.5, 4, -7, 2, 4, -8.5, 2, 4, -8.5, 2.5, 4, 8.5, 2.5, 4.5, 8.5, 2, 4.5, 6, 2.5, 4.5, 8.5, 2, 4.5, 6, 2, 4.5, 6, 2.5, 4.5, -1.5, 3, 5, -1.5, 2, 5, -2, 3, 5, -1.5, 2, 5, -2, 2, 5, -2, 3, 5, 6, 2.5, 5.5, 6, 2, 5.5, 4.5, 2.5, 5.5, 6, 2, 5.5, 4.5, 2, 5.5, 4.5, 2.5, 5.5, -1, 3, 5.5, -1, 2, 5.5, -1.5, 3, 5.5, -1, 2, 5.5, -1.5, 2, 5.5, -1.5, 3, 5.5, 4.5, 2.5, 6, 4.5, 2, 6, -1, 2.5, 6, 4.5, 2, 6, -1, 2, 6, -1, 2.5, 6, -2.5, 2.5, 7, -2.5, 2, 7, -7, 2.5, 7, -2.5, 2, 7, -7, 2, 7, -7, 2.5, 7, 0, 3, -6, 0, 2.5, -6, -4.5, 3, -6, 0, 2.5, -6, -4.5, 2.5, -6, -4.5, 3, -6, 5.5, 3, 5, 5.5, 2.5, 5, 4, 3, 5, 5.5, 2.5, 5, 4, 2.5, 5, 4, 3, 5, 4, 3.5, 5.5, 4, 2.5, 5.5, -1, 3.5, 5.5, 4, 2.5, 5.5, -1, 2.5, 5.5, -1, 3.5, 5.5, -1.5, 4, 4, -1.5, 3, 4, -2, 4, 4, -1.5, 3, 4, -2, 3, 4, -2, 4, 4, 5, 3.5, 4.5, 5, 3, 4.5, 4.5, 3.5, 4.5, 5, 3, 4.5, 4.5, 3, 4.5, 4.5, 3.5, 4.5, 4.5, 3.5, 5, 4.5, 3, 5, 4, 3.5, 5, 4.5, 3, 5, 4, 3, 5, 4, 3.5, 5, -1, 3.5, 5, -1, 3, 5, -1.5, 3.5, 5, -1, 3, 5, -1.5, 3, 5, -1.5, 3.5, 5, -1, 4, 4.5, -1, 3.5, 4.5, -1.5, 4, 4.5, -1, 3.5, 4.5, -1.5, 3.5, 4.5, -1.5, 4, 4.5, 4.5, 4.5, 5, 4.5, 3.5, 5, -1, 4.5, 5, 4.5, 3.5, 5, -1, 3.5, 5, -1, 4.5, 5, -1.5, 4.5, 3.5, -1.5, 4, 3.5, -2, 4.5, 3.5, -1.5, 4, 3.5, -2, 4, 3.5, -2, 4.5, 3.5, -1, 5, 4, -1, 4, 4, -1.5, 5, 4, -1, 4, 4, -1.5, 4, 4, -1.5, 5, 4, 4.5, 5, 4.5, 4.5, 4.5, 4.5, -1, 5, 4.5, 4.5, 4.5, 4.5, -1, 4.5, 4.5, -1, 5, 4.5, 4.5, 5.5, 4, 4.5, 5, 4, -1, 5.5, 4, 4.5, 5, 4, -1, 5, 4, -1, 5.5, 4 )

[node name="Level3" type="Spatial"]
script = ExtResource( 1 )

[node name="LindySpawnPoint" type="Position3D" parent="."]
transform = Transform( 0.127792, 0, -0.991801, 0, 1, 0, 0.991801, 0, 0.127792, 7.44222, 1.74917, -2.69148 )

[node name="PortalLocation" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.27718, 3.22198, -8.246 )

[node name="Sterling" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.935881, 0, 0.352315, 0, 1, 0, -0.352315, 0, -0.935881, 5.24861, 1.39, -7.69735 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SpawnPoints" type="Spatial" parent="."]

[node name="Spawn1" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.03937, 7.40233, 6.70248 )

[node name="Spawn2" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.02118, 7.40233, -9.50129 )

[node name="Spawn3" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.20619, 7.40233, -7.9593 )

[node name="Spawn4" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.20573, 10.4176, -0.942237 )

[node name="Spawn5" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.14498, 10.4176, 4.10303 )

[node name="Spawn6" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.5621, 7.28643, -4.36302 )

[node name="Chest" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -9.2512, 0.447301, -0.130962 )
type = 8

[node name="SpellbreakSphere" type="MeshInstance" parent="."]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -4.71119, 1.70486, 0.462296 )
mesh = ExtResource( 2 )
skeleton = NodePath("../SpellbreakLevel")
material/0 = null

[node name="SpellbreakLevel" type="MeshInstance" parent="."]
mesh = ExtResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="SpellbreakLevel"]

[node name="CollisionShape" type="CollisionShape" parent="SpellbreakLevel/StaticBody"]
shape = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.810277, -0.417403, -0.411371, 0.586047, 0.577107, 0.568767, 0, -0.701942, 0.712234, 0, 5.50823, 0 )
shadow_enabled = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
